<resources>
    <string name="app_name">हाज़िरी Register</string>
    <string name="app_name1">हाज़िरीRegister</string>
    <string name="splash_heading">हाज़िरीRegister</string>
    <string name="enter_password"> Password</string>
    <string name="enter_user_id"> User Id</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="you_may_authorize">You are Specially chosen person you are allowed to add mutiple Work Site . </string>
    <string name="being_adanimin">You have to Add your Work Site here . </string>
    <string name="register" translatable="true">Register</string>
    <string name="swap_admin" translatable="true">Swap Admin</string>
    <string name="select_designation">Select Designation</string>
    <string name="enter_mobile_number"> Mobile Number</string>
    <string name="enter_full_name" translatable="true"> Full Name</string>
    <string name="send_otp">Send Otp</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="select_user_for_swapping">Select Team Member for Swapping</string>
    <string name="user">" User"</string>
    <string name="btn_submit"> Submit </string>
    <string name="welcome"> Welcome </string>
    <string name="profile"> Profile </string>
    <string name="role"> Role </string>
    <string name="register_your_self"> REGISTER YOUR SELF </string>
    <string name="company_or_your_name"> Company or your name </string>
    <string name="app_language"> Language </string>
    <string name="team_size"> Team Size </string>
    <string name="about"> About  </string>
    <string name="create_a_password">Create a Password</string>
    <string name="re_enter_the_password">Re-Enter the password</string>
    <string name="add_site">Add Site</string>
    <string name="site_add"> Your Team Member</string>
    <string name="add">+ Work Site</string>
    <string name="add_labour">Add New Skilled Worker</string>
    <string name="enter_city">Short Name</string>
    <string name="enter_Address">Address</string>
    <string name="enter_site_name">Work Site </string>
    <string name="labour_registration">Register Labour</string>
    <string name="name_of_labour">Name of Labour</string>
    <string name="labour_father_name">Father\'s Name</string>
    <string name="id_num">Mobile/Any Id Number</string>
    <string name="enter_wages">Enter Wages</string>
    <string name="company_name">Company * </string>
    <string name="website">WEBSITE</string>
    <string name="email">Email *</string>
    <string name="address">Address *</string>
    <string name="submit">Submit</string>
    <string name="add_skilled_member">Add Skilled Worker</string>
    <string name="add_unskilled_member">Add UnSkilled Worker</string>
    <string name="manpower">Man Power</string>
    <string name="manpowertatus">MANPOWER STATUS</string>
    <string name="worksite">Work Site </string>
    <string name="siteID" translatable="true"> Site Id </string>
    <string name="workAssociate">Team Member</string>
    <string name="forcelogout">FORCE LOGOUT</string>
    <string name="skileed">SKILLED</string>
    <string name="unskilled">UN-SKILLED</string>
    <string name="KeySupervisor">Supervisor</string>
    <string name="view_unskilled_worker_master_data_sheet">View Unskilled Worker Master Data Sheet</string>
    <string name="view_skilled_worker_master_data_sheet">View Skilled Worker Master Data Sheet</string>
    <string name="add_a_new_worker">Add a new worker</string>
    <string name="attendance">Attendance</string>
    <string name="hi_you_are_an_administrator">Hi -- You are an </string>
    <string name="site_created_date">Site Created Date</string>
    <string name="site_created_date1">Site Created Date</string>
    <string name="you_have_to_freeze_site_working_hours_below_and_can_be_modified_as_per_your_requirement">You have to freeze site working hours below and can be modified as per your requirement.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="cash_in_hand">Cash in Hand</string>
    <string name="show_today_s_payment_list">Show today\'s payment List</string>
    <string name="show_custom_payment_list">Show custom payment list</string>
    <string name="proceed_to_advances_pay">Proceed to advances pay</string>
    <string name="today_s">Today\'s</string>
    <string name="custom">Custom</string>
    <string name="show">Show</string>
    <string name="message">Message</string>
    <string name="download_report">Download Report</string>
    <string name="account_not_created">Account Not Created?</string>
    <string name="let_s_begin">LET\'S BEGIN</string>
    <string name="attendance_for">Attendance for</string>
    <string name="tap_mic_and_speak">Tap Mic and Speak</string>
    <string name="approve_labours_from_the_list">Approve Labours from the list</string>
    <string name="marked_present_labour_list">Mark Present Labour List</string>
    <string name="total_workers">Total Workers:</string>
    <string name="no_labour_marked_pesent">No Labour Marked Pesent</string>
    <string name="upload">Upload</string>
    <string name="payment_details">Payment Details</string>
    <string name="search_result">Search Result</string>
    <string name="total_payments_made">Payment Count:</string>
    <string name="total_payments_sum">Payment Sum:</string>
    <string name="message_display">Message Display</string>
    <string name="search_for_labour_from_list">Search for Labour from list</string>
    <string name="search_worker">Search Worker</string>
    <string name="no_labours_to_show">No Workers To show</string>
    <string name="scroll_to_view_full_list">Scroll to view full list</string>
    <string name="back_to_payment">For Uploading Click Here</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="members_list" translatable="true">Team Member List</string>
    <string name="add_member">Add Team Member</string>
    <string name="attendance_skilled_labour">Attendance -Skilled Labour</string>
    <string name="attendance_unskilled_labour">Attendance -UnSkilled Labour</string>
    <string name="show_uploaded_attendance">Show Uploaded Attendance</string>
    <string name="work_site">WORK SITE</string>
    <string name="site_id">SITE ID</string>
    <string name="skilled">SKILLED</string>
    <string name="master_data">MASTER DATA</string>
    <string name="un_skilled">UN-SKILLED</string>
    <string name="attendence">ATTENDENCE</string>
    <string name="view_all_attendence">VIEW ALL ATTENDENCE</string>
    <string name="download_attendence">DOWNLOAD ATTENDENCE</string>
    <string name="fund_request">FUND REQUEST</string>
    <string name="advances">ADVANCES</string>
    <string name="get_compile_list">Get Compile List</string>
    <string name="before_you_start_your_activity_n_you_need_to_verify_the_site_location_n_click_on_the_button_below_to_automatically_detect_the_location" translatable="true">Before you start your activity,\n You need to Verify the site Location\n Click on the button below to automatically detect the location.</string>
    <string name="detect_location" translatable="true">Detect location</string>
    <string name="location_successfully_detected">Location Successfully detected</string>
    <string name="city">City</string>
    <string name="lucknow">Lucknow</string>
    <string name="pin_code">Pin Code</string>
    <string name="_226016">226016</string>
    <string name="submit_details">Submit Details</string>
    <string name="company">Company :</string>
    <string name="site_nick_name">Site Nick Name</string>
    <string name="site_address">Site Address</string>
    <string name="you_can_change_site_working_hours_below_and_can_be_modified_as_per_your_requirement">You can change site working hours below and can be modified as per your requirement.</string>
    <string name="site_start_time">Site Start Time</string>
    <string name="site_end_time">Site End Time</string>
    <string name="update">Update</string>
    <string name="master_data_sheet_for">Master Data Sheet for</string>
    <string name="language">Language</string>
    <string name="allow_full_amount">Allow Full Amount</string>
    <string name="allow_partial_amount">Allow Partial Amount</string>
    <string name="deny_reuest">Deny Request</string>
    <string name="enter_amt">Enter Amt</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="amount">Amount:</string>
    <string name="remark">Remark:</string>
    <string name="this_is_the_latest_cash_request_received_on_the_site">Latest Request</string>
    <string name="request_amount">Request Amount</string>
    <string name="share">Share</string>
    <string name="youtube">Youtube</string>
    <string name="change_work_option">Change Work Option</string>
    <string name="logout">Logout</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="expense">Expense</string>
    <string name="cash_heading">Cash</string>
    <string name="cancel">Cancel</string>
    <string name="contact_us">Contact Us</string>
    <string name="hold">Hold</string>
    <string name="f1">Forced Logout means Session Out in the हाजिरी Register App… in such situation Associate won’t be able to perform any activity in the हाजिरी Register App.</string>
    <string name="f2">In this हाजिरी Register App Forced Logout Activity arises when the Associate is not active on the हाजिरी Register App last 60mins means Non Active means neither any report is Created or Submitted from the हाजिरी Register App last 60mins.</string>
    <string name="f3">When Associate is Forced Logout from the हाजिरी Register App (as above) …..The हाजिरी Register App notifies the Admin that its Associate is being Forced Logout (red light is ON in Admin’s Timeline) …… On clicking on the Light Admin can either ALLOW or DENY</string>
    <string name="f4">Until and unless the Admin doesn’t clicks on ALLOW Tab, the Associate won’t be able to login in the App.</string>
    <string name="f5">FORCED LOGOUT DETAIL</string>
    <string name="f6">DESCRIPTION</string>
    <string name="f7">Selfie with Site</string>
    <string name="f8">As Associate reaches the Site, his first Activity is login in the हाजिरी Register App and by taking Selfie with Site Associate presence to be marked</string>
    <string name="f9">Associate’s Attendance</string>
    <string name="f10">Forced Logout will happen after 10mins of taking Selfie with Site, if Associate doesn’t start Labor Attendance</string>
    <string name="f11">Labor Attendance</string>
    <string name="f12">Within 10 mins of Selfie with Site Associate will start the Labor Attendance activity and has enter the attendance in next 20mins</string>
    <string name="f13">Upload Attendance</string>
    <string name="f14"><![CDATA[After entering the attendance as above Associate has next 20mins to recheck/revise & Upload the Attendance]]></string>
    <string name="f15">Work Activity</string>
    <string name="f16">After the Attendance is being uploaded, now the timer starts to perform the Activity …. If the Associate doesn’t perform activity in next 60mins , the Associate will be Forced Logout</string>
    <string name="f17">Forced Logout motivates the Associates to engage with company’s work and provide you continuous site reporting via Work Activity Tab. With this tab, Site Reporting can be done by sending Site Images, Site Videos, Audio Messages and also Speech to Text Messages or Comments.</string>
    <string name="welcome_to_hajiri_register">Welcome to Hajiri Register</string>
    <string name="for_better_use">For better use of this app we have a tutorial which will help you understand the working of app more easily. Do you wish to see the tutorial?</string>
    <string name="show_tutorial">Show Tutorial</string>
</resources>