<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/forcelogout"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:src="@drawable/ic_close" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:background="@color/gray_more_light" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f1"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f2"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f3"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/f4"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f5"
                        android:textStyle="bold"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f6"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="@color/black" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f7"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f8"
                        android:textColor="@color/black" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="@color/gray_more_light" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f9"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f10"
                        android:textColor="@color/black" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="@color/gray_more_light" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f11"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f12"
                        android:textColor="@color/black" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="@color/gray_more_light" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f13"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f14"
                        android:textColor="@color/black" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="@color/gray_more_light" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f15"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/f16"
                        android:textColor="@color/black" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="@color/gray_more_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/f17"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>