<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/lightest_orange"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_container"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/txt_comment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:background="@color/lightGreen"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/red"/>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:background="@color/black"/>


</LinearLayout>