<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_hajiri_register"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/red"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_better_use"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_tutorial"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/show_tutorial"
            android:textSize="16sp"
            app:cornerRadius="28dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_tutorial"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:cornerRadius="28dp" />

    </LinearLayout>




</LinearLayout>