<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5.04"
    >
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="@color/black"/>
    <View
        android:layout_width="0dp"
        android:layout_weight="0.01"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <CheckBox
        android:id="@+id/cb_force_logout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forcelogout"/>
    <View
        android:layout_width="0dp"
        android:layout_weight="0.01"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <CheckBox
        android:id="@+id/rb_attendance"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/attendance"
        android:textSize="12sp"/>

    <View
        android:layout_width="0dp"
        android:layout_weight="0.01"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <CheckBox
        android:id="@+id/rb_expense"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/expense"
        android:textSize="12sp"/>
    <View
        android:layout_width="0dp"
        android:layout_weight="0.01"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <CheckBox
        android:id="@+id/rb_cash"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cash_heading"
        android:textSize="12sp"/>

</LinearLayout>